--- a/flexbox.html
+++ b/flexbox.html
@@ -7,7 +7,7 @@
   <meta name="author" content="name">
   <meta name="description" content="description here">
   <meta name="keywords" content="keywords,here">
-  <link rel="stylesheet" href="./css/float.css" type="text/css">
+  <link rel="stylesheet" href="./css/flexbox.css" type="text/css">
   </head>
   <body>
 
