--- a/week4/index.html
+++ b/week4/index.html
@@ -51,7 +51,7 @@
         <div class="row">
             <div class="col-lg order-lg-2">
                 <h3 class="mb-4 text-primary">Colombian food</h3>
-                <img class="mb-4 img-fluid rounded d-none d-sm-block" src="img/colombia.jpg" alt="Colombia">
+                <img class="mb-4 img-fluid rounded d-sm-block" src="img/colombia.jpg" alt="Colombia">
                 <p>Colombia is gastronomic diverse. Colombia is a country that produces tons of foods, fruits, and vegetables. Usually, most regions of Colombia have a unique dish. For example, Medellin is known for the bandeja paisa, Bogota for its ajiaco, and the Valle del Cauca for its delicious manjar blanco.</p>
                 <p>Most of the ingredients used in these recipes are natural and come directly from the crops. They are not processed or altered products, which produces a unique flavor in each of the dishes.</p>
             </div>
@@ -59,7 +59,7 @@
                 <h3 class="mb-4 text-primary">Marketplace</h3>
                 <p>In Colombia, there are large lots in which only fresh fruit and vegetables are sold. the common name used for these places is "market" which in English translates market, but it has a totally different concept. Most of the fruits and vegetables found in the "market" are organic, cheap, and very delicious.</p>
                 <p>As for meat, it is very common to see small shops called "tercenas" in each neighborhood. The meat sold there is usually fresh and of very good quality.</p>
-                <video class="mb-4 d-none d-sm-block" width="320" height="240" controls>
+                <video class="mb-4" width="320" height="240" controls>
                     <source src="video1.mp4" type="video/mp4">
                     <source src="video1.ogg" type="video/ogg">
                 </video>
@@ -183,20 +183,20 @@
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="img/maracuya.jpg" class="w-100 img-fluid rounded d-none d-sm-block" alt="Maracuya">
+                            <img src="img/maracuya.jpg" class="w-100 img-fluid rounded d-sm-block" alt="Maracuya">
                             <div class="carousel-caption d-none d-md-block">
                                 <h6>Maracuya</h6>
 
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/guanabana.jpg" class="w-100 img-fluid rounded d-none d-sm-block" alt="Guanabana">
+                            <img src="img/guanabana.jpg" class="w-100 img-fluid rounded d-sm-block" alt="Guanabana">
                             <div class="carousel-caption d-none d-md-block">
                                 <h6>Guanabana</h6>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="img/lulo.jpg" class="w-100 img-fluid rounded d-none d-sm-block" alt="Lulo">
+                            <img src="img/lulo.jpg" class="w-100 img-fluid rounded d-sm-block" alt="Lulo">
                             <div class="carousel-caption d-none d-md-block">
                                 <h6>Lulo</h6>
                             </div>
